v1.0/markdown/asct-b/kidney.md
# Anatomical Structures, Cell Types, plus Biomarkers (ASCT+B) table for Kidney v1.0

### Description
[Anatomical Structures, Cell Types, plus Biomarkers (ASCT+B) tables](https://hubmapconsortium.github.io/ccf/pages/ccf-anatomical-structures.html) aim to capture the nested part_of structure of anatomical human body parts, the typology of cells, and biomarkers used to identify cell types. The tables are authored and reviewed by an international team of experts.

| Label | Value |
| :------------- |:-------------|
| **Creator(s):** | Sanjay Jain; M. Todd Valerius; Yongqun He |
| **Creator ORCID:** | [0000-0003-2804-127X](https://orcid.org/0000-0003-2804-127X); [0000-0001-8143-9231](https://orcid.org/0000-0001-8143-9231); [0000-0001-9189-9661](https://orcid.org/0000-0001-9189-9661) |
| **Project Lead:** | Katy B&ouml;rner |
| **Project Lead ORCID:** | [0000-0002-3321-6137](https://orcid.org/0000-0002-3321-6137) |
| **Creation Date:** | 2021-03-12 |
| **License:** | Creative Commons Attribution 4.0 International ([CC BY 4.0](https://creativecommons.org/licenses/by/4.0/)) |
| **Publisher:** | HuBMAP |
| **Funder:** | National Institutes of Health |
| **Award Number:** | OT2OD026671 |
| **HuBMAP ID:** | HBM325.PTQS.258 |
| **Data Table:** | https://hubmapconsortium.github.io/ccf-releases/v1.0/asct-b/ASCT-B_VH_Kidney.csv |
| **DOI:** | [https://doi.org/10.35079/HBM325.PTQS.258](https://doi.org/10.35079/HBM325.PTQS.258) |
| **How to Cite This Data Table:** | Sanjay Jain; M. Todd Valerius; Yongqun He. HuBMAP ASCT+B Tables. Bone Marrow and Blood/Pelvis v1.0 [https://doi.org/10.35079/HBM325.PTQS.258](https://doi.org/10.35079/HBM325.PTQS.258) |
| **How to Cite ASCT+B Tables Overall:** | Quardokus, Ellen, Hrishikesh Paul, Bruce W. Herr II, Lisel Record, Katy B&ouml;rner. 2021. *HuBMAP ASCT+B Tables*. https://hubmapconsortium.github.io/ccf/pages/ccf-anatomical-structures.html. Accessed on March 12, 2021. |