v1.2/markdown/asct-b/kidney.md
# Anatomical Structures, Cell Types, plus Biomarkers (ASCT+B) table for Kidney v1.2

### Description
[Anatomical Structures, Cell Types, plus Biomarkers (ASCT+B) tables](https://hubmapconsortium.github.io/ccf/pages/ccf-anatomical-structures.html) aim to capture the nested *part_of* structure of anatomical human body parts, the typology of cells, and biomarkers used to identify cell types. The tables are authored and reviewed by an international team of experts. The kidney ASCT+B tables are generated from a variety of publicly available human kidney datasets and from data generated by HuBMAP and KPMP consortia.  Most of the markers listed are observed in more than one study or orthogonally validated.  Note that these are predicted markers and a single marker to annotate a cell type is not likely sufficient or specific. Therefore, these are just a guide, more accurate annotation should be done using the entire set of enriched genes in a cluster.  The cell types shown here are at much higher granularity, although general markers for many of the structures are also shown.  There is a tradeoff in uncertainty of cell type annotation with higher granularity and as spatial validation approaches become more robust we will be accordingly revising these.


| Label | Value |
| :------------- |:-------------|
| **Creator(s):** | Sanjay Jain; M. Todd Valerius; Yongqun He |
| **Creator ORCID(s):** | [0000-0003-2804-127X](https://orcid.org/0000-0003-2804-127X); [0000-0001-8143-9231](https://orcid.org/0000-0001-8143-9231); [0000-0001-9189-9661](https://orcid.org/0000-0001-9189-9661) |
| **Project Lead:** | Katy B&ouml;rner |
| **Project Lead ORCID:** | [0000-0002-3321-6137](https://orcid.org/0000-0002-3321-6137) |
| **Reviewer(s):** | Blue Lake; Becky Steck; Rachel Dull; Ellen M. Quardokus
| **Reviewer ORCID(s):** |[0000-0002-8637-9044](https://orcid.org/0000-0002-8637-9044); [0000-0001-7565-4904](https://orcid.org/0000-0001-7565-4904); [0000-0002-0864-7007](https://orcid.org/0000-0002-0864-7007); [0000-0001-7655-4833](https://orcid.org/0000-0001-7655-4833)
| **Creation Date:** | 2022-05-06|
| **License:** | Creative Commons Attribution 4.0 International ([CC BY 4.0](https://creativecommons.org/licenses/by/4.0/)) |
| **Publisher:** | HuBMAP |
| **Funder:** | National Institutes of Health |
| **Award Number:** | OT2OD026671 |
| **HuBMAP ID:** | HBM248.CBJV.556 |
| **Data Table:** | [Kidney v1.2](https://hubmapconsortium.github.io/ccf-releases/v1.2/asct-b/ASCT-B_VH_Kidney.csv) |
| **DOI:** | [https://doi.org/10.48539/HBM248.CBJV.556](https://doi.org/10.48539/HBM248.CBJV.556) |
| **How to Cite This Data Table:** | Sanjay Jain; M. Todd Valerius; Yongqun He, HuBMAP ASCT+B Tables. Kidney v1.2 [https://doi.org/10.48539/HBM248.CBJV.556](https://doi.org/10.48539/HBM248.CBJV.556) |
| **How to Cite ASCT+B Tables Overall:** | Quardokus, Ellen, Bruce W. Herr II, Lisel Record, Katy B&ouml;rner. 2022. [*HuBMAP ASCT+B Tables*](https://hubmapconsortium.github.io/ccf/pages/ccf-anatomical-structures.html). Accessed on May 6, 2022. |
